# chat

./: .gitignore  CMakeLists.txt
proto/: adapter_base.djinni  adapter_dialogs.djinni  adapter_search.djinni  all.djinni  app.djinni  build.sh  common.djinni  concurrency.djinni  multithread.djinni  network.proto  network_structs.proto  vm_base.djinni  vm_connection.djinni  vm_dialog.djinni  vm_user.djinni
src/client/: main.cpp
src/client/adapters/: CBaseAdapterImpl.cpp  CBaseAdapterImpl.h  CDialogsAdapterImpl.cpp  CDialogsAdapterImpl.h  CSearchAdapterImpl.cpp  CSearchAdapterImpl.h
src/client/app/: CAppImpl.cpp  CAppImpl.h  CClosureCallback.cpp  CClosureCallback.h  CClosureRunnable.cpp  CClosureRunnable.h
src/client/database/: CDatabase.cpp  CDatabase.h  CSqliteReader.cpp  CSqliteReader.h  CSqliteStmt.cpp  CSqliteStmt.h
src/client/desktop/: CConcurrencyImpl.cpp  CConcurrencyImpl.h
src/client/entities/: CDialog.h
src/client/managers/: CDialogsManager.cpp  CDialogsManager.h
src/client/network/: CClientHandler.cpp  CClientHandler.h  CClientSocketHandler.cpp  CClientSocketHandler.h  CConnection.cpp  CConnection.h  CConnectionState.h  IClientHandlerListener.h  IConnectionListener.h
src/client/vm/: CBaseViewModel.cpp  CBaseViewModel.h  CConnectionViewModelImpl.cpp  CConnectionViewModelImpl.h  CDialogViewModelImpl.cpp  CDialogViewModelImpl.h  CUserViewModelImpl.cpp  CUserViewModelImpl.h
src/common/: common.h
src/common/aes/: aes256.cpp  aes256.h
src/common/ecdh/: ecies.cpp  ecies.h  keys.cpp  secure.cpp
src/common/entities/: CUser.cpp  CUser.h
src/common/network/: AClientHandler.cpp  AClientHandler.h  AMessageHandler.cpp  AMessageHandler.h  CClient.cpp  CClient.h  CClientSocket.cpp  CClientSocket.h  CClientState.h  CMessage.cpp  CMessage.h  COpCode.h  CSocketHandler.cpp  CSocketHandler.h
src/common/tools/: CLog.cpp  CLog.h
src/server/: main.cpp
src/server/database/: CDatabase.cpp  CDatabase.h
src/server/entities/: CUser.h
src/server/managers/: CUsersManager.cpp  CUsersManager.h
src/server/network/: CClientHandler.cpp  CClientHandler.h  CServer.cpp  CServer.h  CServerHandler.cpp  CServerHandler.h  CServerSocket.cpp  CServerSocket.h  CServerSocketHandler.cpp  CServerSocketHandler.h
src/server/network/handlers/: CAuthHandler.cpp  CAuthHandler.h  CContactsHandler.cpp  CContactsHandler.h
src/server/tools/: CEmailTools.cpp  CEmailTools.h
tests/: test.db
